<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bodega"
    tools:context=".MainActivity">

    <ScrollView
        android:id="@+id/scrollVineInternal"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="24dp"
        android:background="#80FFFFFF"
        app:layout_constraintBottom_toTopOf="@+id/btAdd"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tvText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="8dp"
            android:background="@color/white"
            android:fontFamily="@font/roboto_slab"
            android:paddingStart="1dp"
            android:paddingTop="1dp"
            android:paddingEnd="1dp"
            android:paddingBottom="1dp"
            android:textColor="@color/black"
            android:textSize="16sp" />
    </ScrollView>

    <Button
        android:id="@+id/btAdd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:fontFamily="@font/roboto_slab"
        android:text="@string/add"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/scrollVineInternal"
        app:layout_constraintTop_toTopOf="@+id/btEdit"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/etId"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:background="@android:color/transparent"
        android:ems="10"
        android:fontFamily="@font/roboto_slab"
        android:hint="@string/id"
        android:importantForAutofill="no"
        android:inputType="number"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/btEdit"
        app:layout_constraintEnd_toStartOf="@+id/btAdd"
        app:layout_constraintStart_toEndOf="@+id/btEdit"
        app:layout_constraintTop_toTopOf="@+id/btEdit" />

    <Button
        android:id="@+id/btEdit"
        style="@style/buttonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/edit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/scrollVineInternal"
        tools:ignore="TextContrastCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>